# aid

./: .gitignore  Dockerfile  LICENSE  README.md  fly.toml  hit.ipynb  notebook.ipynb  predict.py  pyproject.toml  train.py
assets/: arch.excalidraw
