[tool.poetry]
name = "am-i-diabetic"
version = "0.1.0"
description = ""
authors = ["Ram Krishna Singh <rkscodes@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.24.4"
pandas = "^2.0"
scikit-learn = "^1.3.2"
ucimlrepo = "^0.0.3"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.0.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
