[tool.poetry]
name = "am-i-diabetic"
version = "0.1.0"
description = ""
authors = ["Ram Krishna Singh <rkscodes@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.9.7 || >3.9.7,<4.0"
numpy = "^1.24.4"
pandas = "^2.0"
scikit-learn = "^1.3.2"
ucimlrepo = "^0.0.3"
streamlit = "^1.28.1"
tqdm = "^4.66.1"
flask = "^3.0.0"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.0.7"
dill = "^0.3.7"
seaborn = "^0.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
